--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "description": "אפליקציית CRM לניהול ומעקב אחר מכולות של ח. סבן.",
     "icons": [
         {
-            "src": "https://placehold.co/192x192/0d6efd/FFFFFF?text=סבן",
+            "src": "https://img.icons8.com/?size=100&id=ogKDcYARAnrW&format=png&color=000000",
             "sizes": "192x192",
             "type": "image/png"
         },
