--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
     "description": "אפליקציית CRM לניהול ומעקב אחר מכולות של ח. סבן.",
     "icons": [
         {
-            "src": "https://img.icons8.com/?size=100&id=ogKDcYARAnrW&format=png&color=000000",
+            "src": "s('https://www.gstatic.com/firebasejs/8.10.0/firebase-app",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "https://placehold.co/512x512/0d6efd/FFFFFF?text=סבן",
+            "src": "https://img.icons8.com/?size=100&id=B0jvWzY3wnBK&format=png&color=000000",
             "sizes": "512x512",
             "type": "image/png"
         }
